# idud

./: .env.example  .gitignore  AI_LINKER_OPTIMIZATION_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DATALAKE_LOG.md  DELIVERABLES.md  FLEET_COMPLETION_REPORT.md  HAIKU_INTEGRATION_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FEATURE_SUMMARY.md  Makefile  README.md  READY_TO_GROW.md  SCALING_COMPLETE_REPORT.md  SETUP.md  TASK_COMPLETION_AI_LINKER.md  TRAINING_DATALAKE_SCHEMA.md  TRAINING_IDEMPOTENCY.md  TRAINING_METHODOLOGY.md  TRAINING_VALIDATION_REPORT.md  package.json  test_ai_linker_waymark.sh  validate_ai_linker.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
crates/idud-hygiene/: Cargo.toml  README.md
crates/idud-hygiene/golden_patterns/: analysis_layer_hygiene.json  api_service_boundary.json  architecture_hygiene.json  controller_service_boundary.json  controller_service_pattern.json  error_propagation_boundary.json  event_driven_boundary.json  idud_hygiene_self_hygiene.json  layered_architecture_hygiene.json  naming_conventions.json  pattern_catalog_hygiene.json  pattern_registry.json  pipeline_layer_hygiene.json  production_runtime_hygiene.json  repository_service_boundary.json  side_effect_boundary.json  training_layer_hygiene.json  ui_layer_hygiene.json  usecase_workflow_boundary.json
crates/idud-hygiene/src/: analysis.rs  dashboard_template.html  embedded_manifests.rs  lib.rs  main.rs  manifest.rs  manifest_schema.rs
crates/idud-hygiene/src/analysis/: enforcement.rs  helpers.rs  mod.rs  paths.rs  reporting.rs  rule_checks.rs  rules.rs
crates/idud-hygiene/src/analysis/rule_checks/: ast_pattern_engine.rs  ast_patterns.rs  call_graph.rs  dependencies.rs  patterns.rs  sizes.rs
crates/idud-hygiene/src/analysis/rule_checks/ast_pattern_engine/: collector.rs  matching.rs  pattern_parsing.rs  token_matching.rs
crates/idud-hygiene/src/dashboard/: markup.rs  mod.rs  renderer.rs  rule_renderers.rs
data/: .-contracts.json  idud_synthetic_understanding.html  idud_synthetic_understanding.json  idud_synthetic_understanding.md  repos_to_ingest.json  waymark-intermediate.json  waymark_synthetic_understanding.json  waymark_synthetic_understanding.md
docs/: hygiene-pattern-checklist.md
docs/reference/: Makefile.md  (+15 more)
scripts/: preflight.sh  run-quality-gates.sh  test_ai_linker_subset.sh  test_rust_regex.sh
src/: contract_ledger.rs  lib.rs  link_tree.rs  main.rs  schemas.rs  training_datalake.rs  types.rs  web_server.rs
tests/: e2e_contract_pipeline.rs  integration_ast_analysis.rs  integration_dependency_analysis.rs  integration_repo_orchestrator.rs  pr_prediction_waymark.rs  repo_hygiene.rs  uat_dispatcher.rs  waymark_integration.rs
training/: README.md
(+54 files in other folders)
