[package]
name = "idud"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
regex = "1.10"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
petgraph = { version = "0.6", features = ["serde-1"] }
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "idud"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
