[workspace]
members = ["crates/idud-hygiene"]
resolver = "2"

[package]
name = "idud"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
regex = "1.10"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
petgraph = { version = "0.6", features = ["serde-1"] }
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24.2"
rusqlite = { version = "0.33", features = ["bundled"] }
blake3 = "1.5"
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = "0.5"
leptos_router = "0.5"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = "0.2"
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
pulldown-cmark = { version = "0.9", features = ["simd"] }
once_cell = "1.19"

[dev-dependencies]
idud-hygiene = { path = "crates/idud-hygiene" }
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"

[[bin]]
name = "idud"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
