[package]
name = "idud-hygiene"
version = "0.1.0"
edition = "2021"

[lib]
name = "idud_hygiene"
path = "src/lib.rs"

[[bin]]
name = "idud-hygiene"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
walkdir = "2.4"
